--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,15 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "extra": {
+        "laravel": {
+            "providers": [
+                "DealerInventory\\Client\\Laravel\\DealerInventoryClientServiceProvider"
+            ],
+            "aliases": {
+                "DealerInventory": "DealerInventory\\Client\\Laravel\\DealerInventoryClientFacade"
+            }
+        }
+    }
 }
